// protoc -I . user.proto --go_out=. --go-grpc_out=.
syntax = "proto3";
option go_package = ".;douyin_core";
package douyin.core;
service User{
  rpc CreateUser(UserRegisterRequest)returns(UserRegisterResponse);  // 用户注册
  rpc LoginCheck(UserLoginRequest)   returns(UserLoginResponse);     // 用户登录
  rpc GetUserInfo(UserInfoRequest)   returns(UserInfoResponse);      // 用户信息
}
// 用户注册
message UserRegisterRequest {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message UserRegisterResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

// 用户登录
message UserLoginRequest {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message UserLoginResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

// 用户信息
message UserInfoRequest {
  int64 user_id = 1; // 用户id
}

message UserInfoResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  UserInfo userInfo = 3; // 用户信息
}

message UserInfo {
  int64 user_id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  string avatar = 5; //用户头像
  string signature = 6; //个人简介
  int64 total_favorite = 7; //获赞数量
  int64 work_count = 8; //作品数量
  int64 favorite_count = 9; //点赞数量
}